# jetson-ffmpeg

./: .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .mcp.json  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  TODO.md  cliff.toml  nvmpi.pc.in
.claude/: settings.json
.claude/agents/: vcs-cli.md
.claude/skills/bug-hunter/: SKILL.md
.claude/skills/create-release/: SKILL.md
.claude/skills/fix-issue/: SKILL.md
.claude/skills/gh-issues/: SKILL.md
.claude/skills/retro/: SKILL.md
.claude/skills/vcs-cli/: SKILL.md
.devcontainer/: Dockerfile  bashrc  devcontainer.json
.github/ISSUE_TEMPLATE/: bug-report.yml  build-issue.yml  config.yml  feature-request.yml  github-runner-token-request.yml  gitlab-runner-token-request.yml  question.yml  runner-token-request.yml
.github/workflows/: ci.yml
.gitlab/issue_templates/: Bug Report.md  Build Issue.md  Feature Request.md  GitHub Runner Token Request.md  GitLab Runner Token Request.md  Question.md  Runner Token Request.md
.work/: 10-decoder-blocking-wait-design.md  10-decoder-blocking-wait-plan.md  10-decoder-blocking-wait-status.md
ci/: builder-jp5.Dockerfile  builder-jp6.Dockerfile  l4t-jetpack.Dockerfile  l4t-jetpack5.Dockerfile  l4t-jetpack6.Dockerfile  release-tools.Dockerfile
cmake/: toolchain-aarch64.cmake
docs/: API_REFERENCE.md  ARCHITECTURE.md  BUILD.md  COMPATIBILITY.md  DEVCONTAINER.md  DEVELOPMENT.md  FORKS.md  FORKS_REPORT.md  FORKS_RESULT.md  GITHUB.md  GITHUB_RUNNER_K8S.md  GITHUB_RUNNER_MANUAL.md  GITLAB.md  GITLAB_RUNNER_K8S.md  GITLAB_RUNNER_MANUAL.md  RELEASE.md  SCRIPTS.md  THREAD_SAFETY.md
ffmpeg/dev/: .gitignore  copy_files.sh  try_build.sh  update_patch.sh
ffmpeg/dev/4.2/: configure
ffmpeg/dev/4.2/libavcodec/: Makefile  allcodecs.c
ffmpeg/dev/4.4/: configure
ffmpeg/dev/4.4/libavcodec/: Makefile  allcodecs.c
ffmpeg/dev/6.0/: configure
ffmpeg/dev/6.0/libavcodec/: Makefile  allcodecs.c
ffmpeg/dev/common/libavcodec/: dynlink_nvmpi.h  nvmpi_dec.c  nvmpi_dec_mjpeg.c  nvmpi_enc.c  nvmpi_enc_ff_internal.h  nvmpi_enc_jpeg.c  nvmpi_enc_runtime.c
ffmpeg/dev/common/libavfilter/: dynlink_nvmpi_vic.h  vf_scale_vic.c  vf_scale_vic_frame.c  vf_scale_vic_internal.h
ffmpeg/dev/common/libavutil/: dynlink_nvmpi_cuda.h  hwcontext_nvmpi.c  hwcontext_nvmpi.h
ffmpeg/patches/: ffmpeg4.2_nvmpi.patch  ffmpeg4.4_nvmpi.patch  ffmpeg6.0_nvmpi.patch  ffmpeg6.1_nvmpi.patch  ffmpeg7.0_nvmpi.patch  ffmpeg7.1_nvmpi.patch  ffmpeg8.0_nvmpi.patch  ffmpeg8.1_nvmpi.patch
include/: NVMPI_bufPool.hpp  NVMPI_frameBuf.hpp  nvUtils2NvBuf.h  nvmpi.h  nvmpi_frame_buffer.hpp  nvmpi_log.h
scripts/: README.md  build-images.sh  build.sh  clone-ffmpeg.sh  ffpatch.sh  init-claude.sh  package.sh  release.sh
src/: NVMPI_frameBuf.cpp  nvmpi_dec.cpp  nvmpi_dec_api.cpp  nvmpi_dec_capture.cpp  nvmpi_dec_init.cpp  nvmpi_dec_internal.h  nvmpi_dec_jpeg.cpp  nvmpi_dec_jpeg_ctx.cpp  nvmpi_dec_jpeg_internal.h  nvmpi_dec_planes.cpp  nvmpi_enc.cpp  nvmpi_enc_api.cpp  nvmpi_enc_init.cpp  nvmpi_enc_input.cpp  nvmpi_enc_internal.h  nvmpi_enc_jpeg.cpp  nvmpi_enc_jpeg_internal.h  nvmpi_enc_output.cpp  nvmpi_frame_buffer.cpp  nvmpi_jpegdec.cpp  nvmpi_jpegdec_internal.h  nvmpi_surface.cpp  nvmpi_vic.cpp
stubs/: NvJpegDecoder.cpp  NvJpegEncoder.cpp  jpeg_tegra_stubs.c
test/: README.md  clone-ffmpeg.sh  gen-samples.sh  hw-all.sh  hw-decoder-blocking-wait.sh  hw-decoder-chunk.sh  hw-decoder-codecs.sh  hw-decoder-downscale.sh  hw-decoder-flush.sh  hw-decoder-lifecycle.sh  hw-decoder-mjpeg.sh  hw-decoder-pool.sh  hw-decoder-teardown.sh  hw-encoder-gop.sh  hw-encoder-header.sh  hw-encoder-lifecycle.sh  hw-encoder-pools.sh  hw-encoder-thread-safety.sh  hw-filter-scale-vic.sh  hw-format-pixfmt.sh  hw-perf-bench.sh  hw-perf-blocking-wait.sh  hw-perf-mode.sh  hw-pthread-guard.sh  hw-rtp-sdp.sh  hw-smoke.sh  hw-soak-decode.sh  hw-test.sh  smoke-all.sh
test/api/: test_api.c
test/decoder/: hw-decoder-blocking-wait.sh  hw-decoder-chunk.sh  hw-decoder-codecs.sh  hw-decoder-downscale.sh  hw-decoder-flush.sh  hw-decoder-lifecycle.sh  hw-decoder-mjpeg.sh  hw-decoder-pool.sh  hw-decoder-teardown.sh
test/encoder/: hw-encoder-blocking.sh  hw-encoder-jpeg.sh  hw-encoder-level.sh  hw-encoder-lifecycle.sh  hw-encoder-nonblock.sh  hw-encoder-pools.sh  hw-encoder-thread-safety.sh
test/filter/: hw-filter-scale-vic.sh
test/format/: hw-format-pixfmt.sh
test/integration/: hw-pthread-guard.sh  hw-rtp-sdp.sh  hw-smoke.sh  hw-soak-decode.sh
test/perf/: hw-perf-bench.sh  hw-perf-blocking-wait.sh  hw-perf-mode.sh
test/unit/: test_bufpool.cpp
